<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#90EE90">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wizyta_u_weterynarza"
        android:textSize="35sp"
        android:background="#2E8B57"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/imie_i_nazwisko_wlasciciela" />

    <TextView
        android:id="@+id/speciesLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gatunek" />

    <ListView
        android:id="@+id/speciesList"
        android:layout_width="match_parent"
        android:layout_height="240dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/ageInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ile_ma_lat_0" />

        <SeekBar
            android:id="@+id/ageInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:progress="0"
            android:min="0"
            android:max="20"/>
    </LinearLayout>

    <EditText
        android:id="@+id/objectiveInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/cel_wizyty" />

    <EditText
        android:id="@+id/timeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time"
        android:text="@string/_16_00"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok" />

    <TextView
        android:id="@+id/resultOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

</LinearLayout>